samples/_failures_safe/1761126936_c20fb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6cda43f.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_e6cda43f.c:172:9: error: expected expression at end of input
  172 |         case 2: return
      |         ^~~~
./samples/SAFE/__tmp_e6cda43f.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6cda43f.c:172:9: error: expected declaration or statement at end of input
